--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
+version: '3'
 services:
   db:
     image: postgres:latest
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_DB: library
     ports:
       - "5432:5432"
